--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "tsup-node src/index.ts --minify --minify-whitespace --minify-identifiers --minify-syntax --clean --inlineDynamicImports --env.NODE_ENV production"
   },
   "author": "sovlookup",
+  "email": "gonorth@qq.com",
   "license": "MPLv2",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SOVLOOKUP/rubick-grpc-server"
+  },  
   "dependencies": {
     "@grpc/grpc-js": "^1.3.7",
     "@grpc/proto-loader": "^0.6.4",
@@ -19,5 +24,13 @@
   },
   "devDependencies": {
     "@types/signale": "^1.4.2"
-  }
+  },
+  "files": [
+    "dist/**",
+    "src/types/**",
+    "proto/**",
+    "lib/index.js",
+    "lib/rust-backend/index.node",
+    "lib/rust-backend/index.d.ts"
+  ]
 }
