--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@grpc/grpc-js": "^1.3.7",
     "@grpc/proto-loader": "^0.6.4",
     "mali": "^0.44.3",
-    "signale": "^1.4.0",
-    "threads": "^1.6.5"
+    "signale": "^1.4.0"
   },
   "files": [
     "dist/**",
