--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rubick-grpc-server",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The API base of Rubick",
   "main": "dist/index.js",
   "scripts": {
@@ -14,15 +14,19 @@
     "type": "git",
     "url": "git+https://github.com/SOVLOOKUP/rubick-grpc-server"
   },
-  "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
-    "@grpc/proto-loader": "^0.6.4",
-    "mali": "^0.44.3",
-    "signale": "^1.4.0"
-  },
   "files": [
     "dist/**",
     "proto/**"
   ],
-  "homepage": "https://github.com/SOVLOOKUP/rubick-grpc-server"
+  "homepage": "https://github.com/SOVLOOKUP/rubick-grpc-server",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.3.7",
+    "@grpc/proto-loader": "^0.6.4",
+    "jimp": "^0.16.1",
+    "mali": "^0.44.3",
+    "signale": "^1.4.0"
+  },
+  "devDependencies": {
+    "@types/signale": "^1.4.2"
+  }
 }
