--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
     ],
     "moduleResolution":"Node",
     "declaration": true,
-    "module": "commonjs" /* 指定模块代码生成: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
+    "module": "umd" /* 指定模块代码生成: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
     "target": "ESNext" /* 指定ECMAScript目标版本: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
-    "outDir": "./dist" /* 将输出结构重定向到目录。 */,
+    "outDir": "dist" /* 将输出结构重定向到目录。 */,
     "lib": [
       "esnext"
     ] /* 指定要包含在编译中的库文件。 */,
