--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        platform: [ ubuntu-latest]
 
     runs-on: ${{ matrix.platform }}
     name: Rust project
@@ -20,7 +20,7 @@ jobs:
       - name: Install system deps
         if: matrix.platform == 'ubuntu-latest'
         run: |
-          sudo apt-get install libx11-dev
+          sudo apt-get install libx11-dev libxss-dev
 
       - run: | 
           cd src/worker/rust-backend
