--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,11 @@ jobs:
         with:
           toolchain: stable
       - uses: Swatinem/rust-cache@v1
+      
       - name: Install system deps
         if: matrix.platform == 'ubuntu-latest'
         run: |
-          sudo apt-get install g++ pkg-config libx11-dev libxmu-dev libasound2-dev libudev-dev
+          sudo apt-get install pkg-config libx11-dev libxi-dev
 
       - run: | 
           cd src/worker/rust-backend
