--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,19 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: | 
           cd src/worker/rust-backend
+          rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu
 
       - name: Build windows
         if: matrix.platform == 'windows-latest'
         run: | 
           cd src/worker/rust-backend
+          rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-gnu
 
       - name: Build macos
         if: matrix.platform == 'macos-latest'
         run: | 
           cd src/worker/rust-backend
+          rustup component add rust-src --toolchain nightly-x86_64-apple-darwin
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin
