--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         run: | 
           cd src/worker/rust-backend
           rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
+          rustup component add rustfmt --toolchain nightly-x86_64-unknown-linux-gnu
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu
 
       - name: Build windows
@@ -35,6 +36,7 @@ jobs:
         run: | 
           cd src/worker/rust-backend
           rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
+          rustup component add rustfmt --toolchain nightly-x86_64-pc-windows-msvc
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-gnu
 
       - name: Build macos
@@ -42,4 +44,5 @@ jobs:
         run: | 
           cd src/worker/rust-backend
           rustup component add rust-src --toolchain nightly-x86_64-apple-darwin
+          rustup component add rustfmt --toolchain nightly-x86_64-apple-darwin
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin
