--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-latest, windows-latest, macos-latest ]
+        platform: [ windows-latest ]
 
     runs-on: ${{ matrix.platform }}
     name: Rust project
@@ -31,6 +31,12 @@ jobs:
           rustup component add rustfmt --toolchain nightly-x86_64-unknown-linux-gnu
           cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu
 
+      - name: Set up MinGW
+        uses: egor-tensin/setup-mingw@v2
+        if: matrix.platform == 'windows-latest'
+        with:
+          platform: x64
+    
       - name: Build windows
         if: matrix.platform == 'windows-latest'
         run: | 
