--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ windows-latest ]
+        platform: [ ubuntu-latest, windows-latest, macos-latest ]
 
     runs-on: ${{ matrix.platform }}
     name: Rust project
