--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-latest, windows-latest, macos-latest ]
+        platform: [ windows-latest]
 
     runs-on: ${{ matrix.platform }}
     name: Rust project
@@ -43,7 +43,7 @@ jobs:
           cd src/worker/rust-backend
           rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
           rustup component add rustfmt --toolchain nightly-x86_64-pc-windows-msvc
-          cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-gnu
+          cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-msvc
 
       - name: Build macos
         if: matrix.platform == 'macos-latest'
