--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "rubickbase",
+  "packageManager": "pnpm@6.10.0",
   "version": "0.0.5",
   "description": "Expand native capabilities for nodejs and electron based on rust",
+  "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
+    "./*": {
+      "require": "./dist/*.js",
+      "import": "./dist/*.mjs"
+    }
+  },
   "scripts": {
     "test": "node test/index.test.js",
-    "build": "tsc && node scripts/build.js"
+    "build": "bob-esbuild tsc && pnpm prepack -r"
   },
   "author": "sovlookup",
   "email": "gonorth@qq.com",
@@ -14,19 +28,15 @@
     "type": "git",
     "url": "git+https://github.com/SOVLOOKUP/rubickbase"
   },
-  "files": [
-    "dist/**",
-    "proto/**"
-  ],
-  "homepage": "https://github.com/SOVLOOKUP/rubickbase",
-  "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
-    "@grpc/proto-loader": "^0.6.4",
-    "jimp": "^0.16.1",
-    "mali": "^0.44.3",
-    "signale": "^1.4.0"
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "directory": "dist"
   },
+  "homepage": "https://github.com/SOVLOOKUP/rubickbase",
   "devDependencies": {
-    "@types/signale": "^1.4.2"
+    "@types/estree": "^0.0.50",
+    "@types/signale": "^1.4.2",
+    "bob-esbuild": "^1.2.3",
+    "bob-esbuild-cli": "^1.0.1"
   }
 }
