--- a/packages/rubickbase/package.json
+++ b/packages/rubickbase/package.json
@@ -7,6 +7,7 @@
     "@grpc/proto-loader": "^0.6.4",
     "jimp": "^0.16.1",
     "mali": "^0.44.3",
+    "rubick_backend": "^0.1.1",
     "signale": "^1.4.0"
   },
   "files": [
