--- a/packages/rubickbase/package.json
+++ b/packages/rubickbase/package.json
@@ -1,6 +1,8 @@
 {
   "name": "rubickbase",
-  "version": "0.0.5",
+  "version": "0.1.2",
+  "os": ["linux", "win32", "darwin"],
+  "cpu": ["x64"],
   "description": "Expand native capabilities for nodejs and electron based on rust",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -29,6 +31,11 @@
   },
   "scripts": {
     "prepack": "bob-esbuild build --clean"
+  },
+  "optionalDependencies": {
+    "rubick_backend-darwin": "0.1.2",
+    "rubick_backend-linux": "0.1.2",
+    "rubick_backend-win32": "0.1.2"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.3.7",
