--- a/packages/rust-backend/package.json
+++ b/packages/rust-backend/package.json
@@ -1,18 +1,26 @@
 {
   "name": "rubick_backend",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Native Node.js modules that listen/send simulated events to devices",
   "main": "index.node",
   "homepage": "https://github.com/SOVLOOKUP/rubickbase",
+  "cpu": ["x64"],
+  "type": "module",
   "scripts": {
-    "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
-    "build-debug": "npm run build --",
-    "build-release": "npm run build -- --release",
+    "build": "npx zx scripts/build.js",
+    "prepublish-platform": "npm run build",
+    "publish-platform": "npx zx scripts/publish.js",
+    "build-linux": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu",
+    "build-win32": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-msvc",
+    "build-darwin": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin",
     "test": "cargo test",
     "electron-rebuild": "electron-build-env neon build rubick_backend --release"
   },
   "devDependencies": {
-    "cargo-cp-artifact": "^0.1.5"
+    "zx": "^4.2.0"
   },
-  "files": ["index.node","index.d.ts"]
+  "files": [
+    "index.node",
+    "index.d.ts"
+  ]
 }
