--- a/.github/workflows/BuildCI.yml
+++ b/.github/workflows/BuildCI.yml
@@ -56,6 +56,8 @@ jobs:
 
       # release rust_bakcend
       - name: Release rust_bakcend
-        run: | 
+        env: 
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
           cd packages/rust-backend
           npm run publish-platform
