--- a/.github/workflows/BuildCI.yml
+++ b/.github/workflows/BuildCI.yml
@@ -17,9 +17,16 @@ jobs:
       - uses: actions/checkout@v2
 
       # nodejs
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+            path: ~/.pnpm-store
+            key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+            restore-keys: |
+                ${{ runner.os }}-
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 6.0.2
+          version: 6.14.5
           run_install: true
 
       # rust
@@ -53,6 +60,16 @@ jobs:
         run: | 
           rustup component add rust-src --toolchain nightly-x86_64-apple-darwin
           rustup component add rustfmt --toolchain nightly-x86_64-apple-darwin
+
+      - name: Release
+        if: matrix.os == 'ubuntu-latest'
+        uses: taiki-e/create-gh-release-action@v1
+        with:
+            changelog: CHANGELOG.md
+            title: $version
+            draft: true
+        env:
+            GITHUB_TOKEN: ${{ secrets.github_token }}
 
       # release rust_bakcend
       - name: Release rust_bakcend
