--- a/packages/rubickbase/package.json
+++ b/packages/rubickbase/package.json
@@ -39,9 +39,9 @@
     "prepack": "bob-esbuild build --clean"
   },
   "optionalDependencies": {
-    "rubick_backend-darwin": "0.1.2",
-    "rubick_backend-linux": "0.1.2",
-    "rubick_backend-win32": "0.1.2"
+    "rubick_backend-darwin": "^0.1.2",
+    "rubick_backend-linux": "^0.1.2",
+    "rubick_backend-win32": "^0.1.2"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.3.7",
