--- a/.github/workflows/BuildCI.yml
+++ b/.github/workflows/BuildCI.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # nodejs
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+          registry-url: 'https://npm.pkg.github.com'
       - name: Cache pnpm modules
         uses: actions/cache@v2
         with:
@@ -65,7 +69,7 @@ jobs:
           
       # changelog
       - name: Release
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.platform == 'ubuntu-latest'
         uses: taiki-e/create-gh-release-action@v1
         with:
             changelog: CHANGELOG.md
@@ -77,7 +81,8 @@ jobs:
       # release rust_bakcend
       - name: Release rust_bakcend
         env: 
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           cd packages/rust-backend
           npm run publish-platform
+          cd ../../
